--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <version>1.1.1.Final</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>8.4-702.jdbc4</version>
+        </dependency>
+
 
         <!-- Needed for running tests (you may also use TestNG) -->
         <dependency>
