Loading the kitchen sink example into here to see if it will work with postgres

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,23 @@
             <version>8.4-702.jdbc4</version>
         </dependency>
 
+        <!-- JSR-303 (Bean Validation) Implementation -->
+        <!-- Provides portable constraints such as @Email -->
+        <!-- Hibernate Validator is shipped in JBoss AS 7 -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.2.0.Final</version>
+            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+
 
         <!-- Needed for running tests (you may also use TestNG) -->
         <dependency>
