--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,10 +15,10 @@
                   <url-pattern>/health</url-pattern>
          </servlet-mapping>
 
-    <login-config>
-        <auth-method>BASIC</auth-method>
-        <realm-name>RealmUsersRoles</realm-name>
-    </login-config>
+    <!--<login-config>-->
+        <!--<auth-method>BASIC</auth-method>-->
+        <!--<realm-name>RealmUsersRoles</realm-name>-->
+    <!--</login-config>-->
          
 </web-app>
 
